# viam-spotify

./: .gitignore  Makefile  README.md  build.sh  exec.sh  meta.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: build.yml  checks.yml  deploy.yml
src/: audio_discovery.py  auth_server.py  librespot_client.py  librespot_manager.py  main.py  spotify_service.py  token_manager.py
tests/: test_discovery.py  test_librespot_client.py  test_librespot_manager.py  test_spotify_service.py
